i added my function

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Un título xD</title>
 </head>
 <body>
-    <p>hola compañeros how r u</p>
+    <p>hola compañeros how r u, now i am a developer :)</p>
 </body>
 </html>
